2008-12-01  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-stylesheet.c (ccss_stylesheet_add_from_file): support
	detection of errors from the retval.

2008-12-01  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo-doc/ccss-cairo-docs.sgml:
	* ccss-cairo-doc/ccss-cairo-sections.txt:
	* ccss-cairo-doc/tmpl/grammar.sgml:
	* ccss-doc/ccss-docs.sgml:
	* ccss-doc/ccss-sections.txt:
	* ccss-doc/tmpl/ccss-unused.sgml:
	* ccss-doc/tmpl/ccss.sgml:
	* ccss-doc/tmpl/grammar.sgml:
	* ccss-doc/tmpl/node.sgml:
	* ccss-doc/tmpl/property.sgml:
	* ccss-doc/tmpl/stylesheet.sgml:
	* ccss/ccss-grammar-priv.h:
	* ccss/ccss-grammar.c:
	Update docs.

2008-12-01  Robert Staudinger  <robsta@gnome.org>

	* ccss/Makefile.am:
	* ccss/ccss-grammar-priv.h:
	Fix warnings / `make distcheck'.

2008-12-01  Robert Staudinger  <robsta@gnome.org>

	* examples/example-1.c (main):
	* examples/example-2.c (main):
	* examples/example-3.c (url), (main):
	* examples/example-4.c (font_family_new), (peek_property_class),
	(main):
	* examples/example-5.c (main):
	Move examples to `ccss_grammar_t'.

2008-12-01  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/Makefile.am:
	* ccss-cairo/ccss-background-parser.c (bg_image_parse),
	(background_factory), (background_attachment_create),
	(background_image_create), (background_position_create),
	(background_repeat_create), (background_size_create):
	* ccss-cairo/ccss-background.h:
	* ccss-cairo/ccss-border-image-parser.c (border_image_create):
	* ccss-cairo/ccss-border-image-parser.h:
	* ccss-cairo/ccss-border-image.h:
	* ccss-cairo/ccss-border-parser.c (border_color_factory),
	(border_style_factory), (border_width_factory),
	(border_factory_impl), (border_factory), (border_left_factory),
	(border_top_factory), (border_right_factory),
	(border_bottom_factory), (border_radius_create),
	(border_radius_factory), (border_style_create):
	* ccss-cairo/ccss-border.h:
	* ccss-cairo/ccss-cairo-grammar.c (ccss_cairo_grammar_create):