@@ -45,27 +45,27 @@ struct ccss_grammar_ {
 };
 
 enum CRStatus
-ccss_parser_parse_file (ccss_grammar_t const		*self,
-			char const			*css_file, 
-			ccss_stylesheet_precedence_t	 precedence,
-			GHashTable			*groups,
-			GHashTable			*blocks);
+ccss_grammar_parse_file (ccss_grammar_t const		*self,
+			 char const			*css_file, 
+			 ccss_stylesheet_precedence_t	 precedence,
+			 GHashTable			*groups,
+			 GHashTable			*blocks);
 
 enum CRStatus
-ccss_parser_parse_buffer (ccss_grammar_t const		*self,
-			  char const			*buffer,
-			  size_t			 buffer_size,
-			  ccss_stylesheet_precedence_t	 precedence,
-			  GHashTable			*groups,
-			  GHashTable			*blocks);
+ccss_grammar_parse_buffer (ccss_grammar_t const		*self,
+			   char const			*buffer,
+			   size_t			 buffer_size,
+			   ccss_stylesheet_precedence_t	 precedence,
+			   GHashTable			*groups,
+			   GHashTable			*blocks);
 
 enum CRStatus
-ccss_parser_parse_inline (ccss_grammar_t const		*self,
-			  char const			*buffer,
-			  ccss_stylesheet_precedence_t	 precedence,
-			  ptrdiff_t			 instance,
-			  ccss_selector_group_t		*result_group,
-			  GHashTable			*blocks);
+ccss_grammar_parse_inline (ccss_grammar_t const		*self,
+			   char const			*buffer,
+			   ccss_stylesheet_precedence_t	 precedence,
+			   ptrdiff_t			 instance,
+			   ccss_selector_group_t	*result_group,
+			   GHashTable			*blocks);
 
 CCSS_END_DECLS
 
